--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
 
     <!--Linki-->
-    <div id="links" class="links">
-        <p style="padding-left: 33%; font-size: 18px; text-decoration: underline;">Links</p>
+    <div id="links" class="vertical-menu">
+        <p style="padding-left: 18%; font-size: 18px; text-decoration: underline;">Links</p>
         <a class="linkImage" href="https://github.com/KPZ231"><img src="Images/github.png" alt="github" width="50px" height="50px"></a>
         <a style="top:5% "class="linkImage" href="" target="_blank"><img src="Images/discord.png" alt="discord" width="50px" height="50px"></a>
     </div>
@@ -36,41 +36,6 @@
     </div>
 </body>
 
-<script>
-
-    const links = document.getElementById("links");
-
-    var isMobile = {
-    Android: function() {
-        //alert("Android")
-        return navigator.userAgent.match(/Android/i);
-    },
-    BlackBerry: function() {
-        //alert("BlackBerry")
-        return navigator.userAgent.match(/BlackBerry/i);
-    },
-    iOS: function() {
-       // alert("IOS")
-        return navigator.userAgent.match(/iPhone|iPad|iPod/i);
-    },
-    Opera: function() {
-        //alert("Opera")    
-        return navigator.userAgent.match(/Opera Mini/i);
-    },
-    Windows: function() {
-        //alert("Windows")
-        return navigator.userAgent.match(/IEMobile/i) || navigator.userAgent.match(/WPDesktop/i);
-    },
-    any: function() {
-        return (isMobile.Android() || isMobile.BlackBerry() || isMobile.iOS() || isMobile.Opera() || isMobile.Windows());
-    }
-};
-
-if( isMobile.any() ) alert('Używasz urządzenia mobilnego!');
-
-
-
-</script>
 
 
 </html>
