Updating Main Block

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <!--Główne Bloki Z Moimi Produkcjami-->
     <div class="mainBlock" style="display: block;">
         <a href="https://kacper-duda.itch.io/scp-173-decontamination" target="_blank">
-            <img src="Images/scp_img.png" alt="scp-173-decontamination"></a>
+            <img src="Images/scp_img.png" alt="scp-173-decontamination" width="200px" style="position: relative;"></a>
         <a href="https://thedramgamestudios.itch.io/esaper" target="_blank">
-            <img src="Images/escaper.png" alt="escaper"></a>
+            <img src="Images/escaper.png" alt="escaper" width="200px"></a>
     </div>
 
     <!--Linki-->
