Update Main Block

--- a/index.html
+++ b/index.html
@@ -17,22 +17,31 @@
     <!--Główne Bloki Z Moimi Produkcjami-->
     <div class="mainBlock" style="display: block;">
         <a href="https://kacper-duda.itch.io/scp-173-decontamination" target="_blank">
-            <img src="Images/scp_img.png" alt="scp-173-decontamination" width="200px" style="position: relative;"></a>
+            <img src="Images/scp_img.png" alt="scp-173-decontamination" width="200px" style="display: block;
+            margin-left: auto;
+            margin-right: auto"></a>
         <a href="https://thedramgamestudios.itch.io/esaper" target="_blank">
-            <img src="Images/escaper.png" alt="escaper" width="200px"></a>
+            <img src="Images/escaper.png" alt="escaper" width="200px" style="display: block;
+            margin-left: auto;
+            margin-right: auto"></a>
     </div>
 
     <!--Linki-->
     <div id="links" class="vertical-menu">
         <p style="padding-left: 18%; font-size: 18px; text-decoration: underline;">Links</p>
-        <a class="linkImage" href="https://github.com/KPZ231"><img src="Images/github.png" alt="github" width="50px" height="50px"></a>
-        <a style="top:5% "class="linkImage" href="" target="_blank"><img src="Images/discord.png" alt="discord" width="50px" height="50px"></a>
+        <a class="linkImage" href="https://github.com/KPZ231"><img src="Images/github.png" alt="github" width="50px"
+                height="50px"></a>
+        <a style="top:5% " class="linkImage" href="" target="_blank"><img src="Images/discord.png" alt="discord"
+                width="50px" height="50px"></a>
     </div>
-    
+
     <!--Footer-->
     <div class="footer">
-       <p>Contact: Email: <span style="text-decoration: underline; font-style: italic; color: blueviolet;">contactkpz.productions@gmail.com</span> or Discord:
-         <span style="text-decoration: underline; font-style: italic; color: blueviolet;">itsakacperduda#8787</span></p>
+        <p>Contact: Email: <span
+                style="text-decoration: underline; font-style: italic; color: blueviolet;">contactkpz.productions@gmail.com</span>
+            or Discord:
+            <span style="text-decoration: underline; font-style: italic; color: blueviolet;">itsakacperduda#8787</span>
+        </p>
     </div>
 </body>
 
