--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -10,12 +11,11 @@
 </head>
 
 <body>
-
-    <h1 style="text-align: center; font-size: 36px;">Welcome To KPZsProductions</h1>
-    <h2 style="text-align: center; font-size: 24px;">My Productions</h2>
+    <h1 style="text-align: center; font-size: 36px;" class="animate__animated animate__backInLeft">Welcome To KPZsProductions</h1>
+    <h2 style="text-align: center; font-size: 24px;"class="animate__animated animate__backInRight">My Productions</h2>
 
     <!--Główne Bloki Z Moimi Produkcjami-->
-    <div class="mainBlock" style="display: block;">
+    <div class="mainBlock animate__animated animate__backInUp" style="display: block;">
         <a href="https://kacper-duda.itch.io/scp-173-decontamination" target="_blank">
             <img src="Images/scp_img.png" alt="scp-173-decontamination" width="200px" style="display: block;
             margin-left: auto;
@@ -27,7 +27,7 @@
     </div>
 
     <!--Linki-->
-    <div id="links" class="vertical-menu">
+    <div id="links" class="animate__animated animate__backInRight vertical-menu">
         <p style="padding-left: 18%; font-size: 18px; text-decoration: underline;">Links</p>
         <a class="linkImage" href="https://github.com/KPZ231"><img src="Images/github.png" alt="github" width="50px"
                 height="50px"></a>
