--- a/index.html
+++ b/index.html
@@ -1,113 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="KPZsProductions: Innovative software and game development company."
-    />
-    <meta
-      name="keywords"
-      content="KPZsProductions, GameDev, Software, Development"
-    />
-    <meta name="author" content="KPZ" />
-    <link rel="icon" href="images/logo_removed_bg.png" />
-    <link
-      rel="stylesheet"
-      href="//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>KPZsProductions</title>
-  </head>
-  <body>
-    <p
-      style="font-size: 3.2em; text-align: center"
-      class="line-1 anim-typewriter"
-    >
-      Welcome To KPZsProductions Website!
-    </p>
-    <div class="container">
-      <a
-        href="content.html"
-        class="animate__animated animate__fadeInUp"
-        style="font-size: 1.5em; position: absolute; left: 40%"
-      >
-        See Our Content
-      </a>
-      <a
-        onclick="showContact()"
-        class="animate__animated animate__fadeInUp"
-        style="font-size: 1.5em; position: absolute; left: 0%"
-      >
-        Contact
-      </a>
-      <a
-        href="https://github.com/KPZ231"
-        target="_blank"
-        class="animate__animated animate__fadeInUp"
-        style="font-size: 1.5em; position: absolute; left: 90%"
-      >
-        Github
-      </a>
-    </div>
-
-    <div id="contactBox">
-      <h2>Contact Us At:</h2>
-      <p>
-        Email:
-        <span
-          style="
-            font-style: italic;
-            color: rgb(132, 0, 255);
-            text-shadow: black 2px 2px 2px;
-          "
-          >contactkpz.productions@gmail.com</span
-        >
-      </p>
-      <p>
-        Discord:
-        <span
-          style="
-            font-style: italic;
-            color: rgb(132, 0, 255);
-            text-shadow: black 2px 2px 2px;
-          "
-          >kpz231</span
-        >
-      </p>
-      <span
-        onclick="hideContact()"
-        style="position: absolute; bottom: 5em; right: 1em; cursor: pointer"
-        class="material-symbols-outlined"
-      >
-        close
-      </span>
-    </div>
-
-    <script>
-      const contactBox = document.getElementById("contactBox");
-
-      function showContact() {
-        contactBox.style.display = "block";
-        contactBox.style.animation = "fadeIn 1s";
-      }
-
-      function hideContact() {
-        contactBox.style.animation = "fadeOut 1s";
-        //Wait for 1 s
-        setTimeout(() => {
-          contactBox.style.display = "none";
-        }, 1000);
-      }
-    </script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
 </html>
