--- a/index.html
+++ b/index.html
@@ -1,30 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KPZsProductions</title>
-    <meta name="author" content="KPZ">
-    <meta name="keywords" content="portfolio, projects, KPZ, productions">
-    <meta name="description" content="Welcome to KPZsProductions! Explore my portfolio of projects and creations.">
-    <meta name="robots" content="index, follow">
-    <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-z   
+    <meta name="author" content="KPZ" />
+    <meta name="keywords" content="portfolio, projects, KPZ, productions" />
+    <meta
+      name="description"
+      content="Welcome to KPZsProductions! Explore my portfolio of projects and creations."
+    />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="robots"
+      content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"
+    />
+    z
     <!-- Links -->
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/about.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="typewriter"><h1>Welcome To <i>KPZsProductions.</i></h1></div>
-         <div class="cont">
-        <a class="button" href="about.html" target="_blank">About My Activity</a>
-        <a class="button" href="https://github.com/KPZ231" target="_blank">Gitub</a>
+      <div class="typewriter">
+        <h1>Welcome To <i>KPZsProductions.</i></h1>
+      </div>
+      <div class="cont">
+        <a class="button" href="about.html" target="_blank"
+          >About My Activity</a
+        >
+        <a class="button" href="https://github.com/KPZ231" target="_blank"
+          >Gitub</a
+        >
         <a class="button" href="proj.html" target="_blank">My Projects</a>
-    </div>
+      </div>
+
+      <main class="containerForAbout">
+        <p>I`am</p>
+        <section class="animation">
+          <div class="first"><div>Kacper Duda</div></div>
+          <div class="second"><div>Game Developer</div></div>
+          <div class="third"><div>Software Engineer</div></div>
+        </section>
+      </main>
     </div>
 
-   
     
-</body>
+  </body>
 </html>
