--- a/about.html
+++ b/about.html
@@ -10,6 +10,11 @@
       name="description"
       content="Welcome to KPZsProductions! Explore my portfolio of projects and creations."
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+
     <meta name="robots" content="index, follow" />
     <meta
       name="robots"
@@ -18,20 +23,11 @@
 
     <!-- Links -->
     <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="stylesheet" href="styles/about.css">
   </head>
-  <body style="background-color: #27233a">
-    <main class="containerForAbout">
-        <p>Welcome! I`am</p>
-        <section class="animation">
-          <div class="first"><div>Kacper Duda</div></div>
-          <div class="second"><div>Game Developer</div></div>
-          <div class="third"><div>Software Engineer</div></div>
-          <div class="fourth"><div>Systems Engineer</div></div>
-          <div class="fifth"><div>Systems Engineer</div></div>
-        </section>
-      </main>
 
-
+  <body>
+    <a href="/index.html">
+      <span class="material-symbols-outlined"> keyboard_return </span>
+    </a>
   </body>
 </html>
