--- a/about.html
+++ b/about.html
@@ -29,5 +29,26 @@
     <a href="/index.html">
       <span class="material-symbols-outlined"> keyboard_return </span>
     </a>
+
+    <div class="informationContainer">
+      <h3>About Me</h3>
+      <hr />
+      <p>
+        I am a young software and game developer, currently in the third year of
+        high school, specializing in programming. My passion for coding began
+        when I was 10 years old, and since then, I have continuously developed
+        my skills in both software and game development. I am particularly
+        interested in creating video games, as they allow me to combine
+        creativity with problem-solving in a highly engaging way. I also enjoy
+        working on software projects that can make everyday tasks more efficient
+        and user-friendly. When it comes to my technical skills, I am proficient
+        in several programming languages, including HTML, CSS, JavaScript, PHP,
+        C#, C++, and SQL. I have a foundational understanding of Python, which I
+        am currently exploring further. These skills have allowed me to work on
+        various projects, from web development to more complex software and game
+        programming. My goal is to continue improving my abilities and exploring
+        new technologies to create innovative solutions.
+      </p>
+    </div>
   </body>
 </html>
