--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       name="robots"
       content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"
     />
-    z
+    
     <!-- Links -->
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/about.css" />
@@ -26,23 +26,23 @@
         <h1>Welcome To <i>KPZsProductions.</i></h1>
       </div>
       <div class="cont">
-        <a class="button" href="about.html" target="_blank"
+        <a class="button" href="about.html" 
           >About My Activity</a
         >
-        <a class="button" href="https://github.com/KPZ231" target="_blank"
-          >Gitub</a
+        <a class="button" href="https://github.com/KPZ231"
+          >Github</a
         >
-        <a class="button" href="proj.html" target="_blank">My Projects</a>
+        <a class="button" href="proj.html" >My Projects</a>
       </div>
 
-      <main class="containerForAbout">
+      <!-- <main class="containerForAbout">
         <p>I`am</p>
         <section class="animation">
           <div class="first"><div>Kacper Duda</div></div>
           <div class="second"><div>Game Developer</div></div>
           <div class="third"><div>Software Engineer</div></div>
         </section>
-      </main>
+      </main> -->
     </div>
 
     
