--- a/proj.html
+++ b/proj.html
@@ -15,11 +15,46 @@
       name="robots"
       content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"
     />
-
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+  />
     <!-- Links -->
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    
+
+    <a href="/index.html">
+      <span class="material-symbols-outlined"> keyboard_return </span>
+    </a>
+    <div class="grid">
+
+      <h1>My Projects</h1>
+      <hr>
+      <br>
+      <div class="container">
+        <iframe
+          frameborder="0"
+          src="https://itch.io/embed/1895721?linkback=true&amp;border_width=2&amp;bg_color=2a2626&amp;fg_color=ffffff&amp;link_color=975bfa&amp;border_color=ffffff"
+          width="554"
+          height="169"
+          ><a href="https://kacper-duda.itch.io/scp-173-decontamination"
+            >SCP-173 Decontamination by KPZ</a
+          ></iframe
+        >
+
+        <div class="container">
+          <iframe
+            frameborder="0"
+            src="https://itch.io/embed/2727471?linkback=true&amp;bg_color=2a2626&amp;fg_color=ffffff&amp;link_color=975bfa"
+            width="552"
+            height="167"
+            ><a href="https://kacper-duda.itch.io/dinos-clicker"
+              >Dino`s Clicker by KPZ</a
+            ></iframe
+          >
+        </div>
+      </div>
+    </div>
   </body>
 </html>
