rework the entire website

--- a/proj.html
+++ b/proj.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Projects</title>
+    <title>Projects | KPZsProductions</title>
     <meta name="author" content="KPZ" />
-    <meta name="keywords" content="portfolio, projects, KPZ, productions" />
+    <meta name="keywords" content="portfolio, projects, KPZ, productions, game development" />
     <meta
       name="description"
-      content="Welcome to KPZsProductions! Explore my portfolio of projects and creations."
+      content="Explore KPZ's portfolio of game development and software engineering projects."
     />
     <meta name="robots" content="index, follow" />
     <meta
@@ -16,43 +16,42 @@
       content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"
     />
     <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-  />
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <!-- Links -->
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-
-    <a href="/index.html">
-      <span class="material-symbols-outlined"> keyboard_return </span>
+    <a href="./index.html" class="return-button">
+      <span class="material-symbols-outlined">keyboard_return</span>
     </a>
-    <div class="grid">
-
+    
+    <div class="container">
       <h1>My Projects</h1>
       <hr>
-      <br>
-      <div class="container">
-        <iframe
-          frameborder="0"
-          src="https://itch.io/embed/1895721?linkback=true&amp;border_width=2&amp;bg_color=2a2626&amp;fg_color=ffffff&amp;link_color=975bfa&amp;border_color=ffffff"
-          width="554"
-          height="169"
-          ><a href="https://kacper-duda.itch.io/scp-173-decontamination"
-            >SCP-173 Decontamination by KPZ</a
-          ></iframe
-        >
-
-        <div class="container">
+      
+      <div class="grid">
+        <div class="project-card">
           <iframe
             frameborder="0"
-            src="https://itch.io/embed/2727471?linkback=true&amp;bg_color=2a2626&amp;fg_color=ffffff&amp;link_color=975bfa"
-            width="552"
-            height="167"
-            ><a href="https://kacper-duda.itch.io/dinos-clicker"
-              >Dino`s Clicker by KPZ</a
-            ></iframe
-          >
+            src="https://itch.io/embed/1895721?linkback=true&amp;border_width=2&amp;bg_color=1a1a2e&amp;fg_color=ffffff&amp;link_color=c8a951&amp;border_color=c8a951"
+            width="100%"
+            height="169"
+          ><a href="https://kacper-duda.itch.io/scp-173-decontamination"
+            >SCP-173 Decontamination by KPZ</a
+          ></iframe>
+        </div>
+
+        <div class="project-card">
+          <iframe
+            frameborder="0"
+            src="https://itch.io/embed/2727471?linkback=true&amp;bg_color=1a1a2e&amp;fg_color=ffffff&amp;link_color=c8a951&amp;border_color=c8a951"
+            width="100%"
+            height="169"
+          ><a href="https://kacper-duda.itch.io/dinos-clicker"
+            >Dino`s Clicker by KPZ</a
+          ></iframe>
         </div>
       </div>
     </div>
