--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About My Activity</title>
+    <title>About | KPZsProductions</title>
     <meta name="author" content="KPZ" />
-    <meta name="keywords" content="portfolio, projects, KPZ, productions" />
+    <meta name="keywords" content="portfolio, projects, KPZ, productions, game development" />
     <meta
       name="description"
-      content="Welcome to KPZsProductions! Explore my portfolio of projects and creations."
+      content="Learn more about KPZ - game developer and software engineer passionate about creating innovative solutions."
     />
     <link
       rel="stylesheet"
@@ -23,11 +23,12 @@
 
     <!-- Links -->
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/about.css" />
   </head>
 
   <body>
-    <a href="/index.html">
-      <span class="material-symbols-outlined"> keyboard_return </span>
+    <a href="./index.html" class="return-button">
+      <span class="material-symbols-outlined">keyboard_return</span>
     </a>
 
     <div class="informationContainer">
@@ -37,18 +38,28 @@
         I am a young software and game developer, currently in the third year of
         high school, specializing in programming. My passion for coding began
         when I was 10 years old, and since then, I have continuously developed
-        my skills in both software and game development. I am particularly
-        interested in creating video games, as they allow me to combine
+        my skills in both software and game development.
+      </p>
+      <p>
+        I am particularly interested in creating video games, as they allow me to combine
         creativity with problem-solving in a highly engaging way. I also enjoy
         working on software projects that can make everyday tasks more efficient
-        and user-friendly. When it comes to my technical skills, I am proficient
+        and user-friendly.
+      </p>
+      <p>
+        When it comes to my technical skills, I am proficient
         in several programming languages, including HTML, CSS, JavaScript, PHP,
         C#, C++, and SQL. I have a foundational understanding of Python, which I
-        am currently exploring further. These skills have allowed me to work on
+        am currently exploring further.
+      </p>
+      <p>
+        These skills have allowed me to work on
         various projects, from web development to more complex software and game
         programming. My goal is to continue improving my abilities and exploring
         new technologies to create innovative solutions.
       </p>
     </div>
+    
+    <script src="js/animations.js"></script>
   </body>
 </html>
