--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
     <script src="js/animations.js"></script>
     <script src="js/structured-data.js"></script>
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3Z809QTTHH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3Z809QTTHH');
+    </script>
+
     <!-- Structured Data Schema -->
     <script type="application/ld+json">
     {
