--- a/proj.html
+++ b/proj.html
@@ -105,6 +105,16 @@
         });
       });
     </script>
+
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3Z809QTTHH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3Z809QTTHH');
+    </script>
     
     <script src="js/structured-data.js"></script>
     <script src="js/animations.js"></script>
